force-app/main/default/objects/JobPosting__c/JobPosting__c.object-meta.xml
<CustomObject>
    <description>Used to hold a posting of a role from a account.</description>
    <label>Job Posting</label>
    <nameField>
        <label>Job Posting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Postings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>