force-app/main/default/objects/JobPosting__c/fields/CompanyRef__c.field-meta.xml
<CustomField>
    <fullName>CompanyRef__c</fullName>
    <description>The account that has posted this job.</description>
    <label>Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Job Postings</relationshipLabel>
    <relationshipName>JobPostings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>