force-app/main/default/objects/JobPosting__c/fields/GoToPosting__c.field-meta.xml
<CustomField>
    <fullName>GoToPosting__c</fullName>
    <description>Go to Jooble Link</description>
    <formula>HYPERLINK(Link__c, &quot;Click HERE!&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Go to Posting</label>
    <type>Text</type>
</CustomField>