force-app/main/default/objects/JobPosting__c/fields/JooblePostingId__c.field-meta.xml
<CustomField>
    <fullName>JooblePostingId__c</fullName>
    <description>Used as external Id to the job posting from Jooble.</description>
    <externalId>true</externalId>
    <label>Jooble Posting Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>