force-app/main/default/objects/JobPosting__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <description>The link to the jooble site.</description>
    <label>Link</label>
    <type>Url</type>
</CustomField>