force-app/main/default/objects/JobPosting__c/fields/Snippet__c.field-meta.xml
<CustomField>
    <fullName>Snippet__c</fullName>
    <description>The listed job snippet.</description>
    <label>Snippet</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>