force-app/main/default/objects/JobPosting__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>The listed source from Jooble</description>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>