force-app/main/default/objects/JobPosting__c/fields/Updated__c.field-meta.xml
<CustomField>
    <fullName>Updated__c</fullName>
    <description>The datetime that the jooble posting was last updated.</description>
    <inlineHelpText>Jooble Time</inlineHelpText>
    <label>Updated</label>
    <type>DateTime</type>
</CustomField>